app/k8s/base/namespace.yaml
# k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-base # Kustomize reemplazará esto
